김민주: <fix> Modal z-index 수정

--- a/src/elements/modal/style.scss
+++ b/src/elements/modal/style.scss
@@ -9,6 +9,7 @@
   top: 0;
   text-align: center;
   background: rgba(0, 0, 0, 0.5);
+  z-index: 99999;
 }
 
 .content{
